@@ -209,6 +209,7 @@ Test::Spelling                                 = 0
 
 YAML                                           = 0
 YAML::XS                                       = 0
+Text::Hunspell                                 = 0
 
 Alien::libuv                                   = 1.012
 
