@@ -9,6 +9,7 @@ Revision history for {{$dist->name}}
   - Added App::supertouch
   - Added Alien::help2man
   - Removed Dist::Zilla::Plugin::Author::Plicease (now reunited with Dist::Zilla::PluginBundle::Author::Plicease)
+  - Added Text::Hunspell
 
 2.14      2019-12-16 12:21:02 -0700
   - Updated my dists to latest
